Further fixes to alignment in row configuration

--- a/src/components/Activities.css
+++ b/src/components/Activities.css
@@ -98,7 +98,7 @@ THIS IS WHERE IT'S CHANGED TO COLOUMN */
     .rightTile{
         width: 18rem;
         margin-bottom: 0rem;
-        margin-top: 1rem;
+        margin-top: 2rem;
     }
 }
 
@@ -106,7 +106,7 @@ THIS IS WHERE IT'S CHANGED TO COLOUMN */
     .rightTile{
         width: 20rem;
         margin-bottom: 0rem;
-        margin-top: 1rem;
+        margin-top: 2rem;
     }
 }
 
