--- a/src/components/LocalAlarm.css
+++ b/src/components/LocalAlarm.css
@@ -32,7 +32,6 @@
 @media (max-width: 1300px){
     .local-alarm{
         width:  48rem;
-        margin-top: 1.5rem;
         margin-left: 2rem;
         padding-bottom: 1.5rem;
     }
